# hw-cam-datawarehousing

./: .gitignore  README.md  delpycache.sh  dotcctv.html  main.py  manager.py  pyproject.toml  seedeps.py
.github/actions/: publish.yml
.github/workflows/: publish.yml
silverflaghwdata/: client.py  manager.py  server.py  srvmng.py
silverflaghwdata/states/: connecticut.py  deleware.py  georgia.py  indiana.py  iowa.py  kansas.py  massachusetts.py  michigan.py  minnesota.py  missouri.py  montana.py  nebraska.py  nevada.py  newjersey.py
silverflaghwdata/states/data/New Jersey/1767408031/: apidata.json
states/: alabama.py  alaska.py  arkansas.py  california.py
