[build-system]
requires = ['ast', 'concurrent', 'csv', 'importlib', 'json', 'math', 'os', 'pathlib', 'pkgutil', 're', 'requests', 'states', 'subprocess', 'sys', 'threading', 'time', 'urllib']
build-backend = "setuptools.build_meta"

[project]
name = "silverflaghwdata"
version = "0.1.0"
description = "Scrapers for all of the DoT websites."
authors = [{ name="SilverFlag", email="contact@silverflag.net"}]
dependencies = []

[project.scripts]
silverflag-dot-scraper = "main:main"